# atomically-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
atomically/: __init__.py  cli.py
tests/: test_atomically.py
tests/atomic_files/: basic.yml  custom_operation.yml
tests/generated_files/: basic.yml  custom_operation.yml
tests/snapshots/: snap_test_atomically.py
